--- a/aboly.html
+++ b/aboly.html
@@ -792,7 +792,10 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><a id="li3"></a><span class="lyterm">礼</span>：礼节，礼仪，本义为敬祭神灵以求降福。<a href="#zhougong">周公</a>制礼作乐后，礼的内涵逐渐由崇拜神灵转变为尊崇道德，孔子又丰富了它的<a href="#lun2">伦理</a>因素。在<a href="#zhuxingding">成文法</a>通行以前，礼具有社会约束的效用，“不可无礼”也一直比法律条文更深入人心，如《诗经·鄘风·相鼠》：<span class="lyq">相鼠有体，人而无礼；人而无礼，胡不遄死！</span>（相：视。遄（<span class="lypinyin">chuán</span>）：快，疾速。）仁、礼是儒家思想的核心观念。</p>
-<p><span class="lyseealso"><span>【参】</span><span><a href="#6.27" class="lyref">6.27</a> <span class="lyq">约之以礼。</span>《礼记·乐记》：<span class="lyq">先王之制<a href="#liyue">礼乐</a>，人为之<a href="#jie2a">节</a>……礼节民心，乐和民声，政以行之，刑以防之。礼乐刑政，四达而不悖，则<a href="#wangdao">王道</a>备矣。</span>（礼，节而非禁。）《荀子·礼论》：<span class="lyq">礼起于何也？曰：人生而有欲，欲而不得，则不能无求；求而无度量分界，则不能不争；争则乱，乱则<a href="#qiong2">穷</a>。先王恶其乱也，故制礼义以分之，以养人之欲，给人之求，使欲必不穷乎物，物必不屈于欲，两者相持而长。</span>（给（<span class="lypinyin">jǐ</span>）：供养。）《韩非子·解老》：<span class="lyq">礼者，所以貌情也，群义之文章也，君臣父子之交也，贵贱贤不肖之所以别也。……礼者，外饰之所以谕内也。</span>（礼发自人情。貌：动词，表现，表达。群：众，各种。<a href="#wen2">文</a>章：指经由礼仪的外在表现。<a id="yu4c"></a>谕：表明，显现。）《左传·僖公十一年》：<span class="lyq">礼，国之干也；敬，礼之舆也。不敬则礼不行，礼不行则上下昏，何以长世？</span>（<a href="#yu2b">舆</a>：承载，基础。）亦参 <a href="#2.1" class="lyref">2.1</a> <a href="#dezhi">德治</a>与<a href="#fazhi">法治</a>的比较，<a href="#6.22" class="lyref">6.22</a> <a href="#mingshenli">所引</a>《礼记·表记》。</span></span></p>
+<div class="lyseealso">
+<p><span>【参】</span><span><a href="#6.27" class="lyref">6.27</a> <span class="lyq">约之以礼。</span>《礼记·乐记》：<span class="lyq">先王之制<a href="#liyue">礼乐</a>，人为之<a href="#jie2a">节</a>……礼节民心，乐和民声，政以行之，刑以防之。礼乐刑政，四达而不悖，则<a href="#wangdao">王道</a>备矣。</span>（礼，节而非禁。）《荀子·礼论》：<span class="lyq">礼起于何也？曰：人生而有欲，欲而不得，则不能无求；求而无度量分界，则不能不争；争则乱，乱则<a href="#qiong2">穷</a>。先王恶其乱也，故制礼义以分之，以养人之欲，给人之求，使欲必不穷乎物，物必不屈于欲，两者相持而长。</span>（给（<span class="lypinyin">jǐ</span>）：供养。）《韩非子·解老》：<span class="lyq">礼者，所以貌情也，群义之文章也，君臣父子之交也，贵贱贤不肖之所以别也。……礼者，外饰之所以谕内也。……众人之为礼也，以尊他人也，故时<a href="#quan4">劝</a>时衰；君子之为礼也，以为其身。</span>（礼发自人情。貌：动词，表现，表达。群：众，各种。<a href="#wen2">文</a>章：指经由礼仪的外在表现。<a id="yu4c"></a>谕：表明，显现。）《左传·僖公十一年》：<span class="lyq">礼，国之干也；敬，礼之舆也。不敬则礼不行，礼不行则上下昏，何以长世？</span>（<a href="#yu2b">舆</a>：承载，基础。）亦参 <a href="#2.1" class="lyref">2.1</a> <a href="#dezhi">德治</a>与<a href="#fazhi">法治</a>的比较，<a href="#6.22" class="lyref">6.22</a> <a href="#mingshenli">所引</a>《礼记·表记》。</span></p>
+<p>《韩非子·解老》还论述了<a href="#dao4">道</a>、<a href="#de2">德</a>、<a href="#ren2">仁</a>、<a href="#yi4">义</a>、礼这些概念的关系：<span class="lyq">道有积而积有功；德者，道之功。功有实而实有光；仁者，德之光。光有泽而泽有事；义者，仁之事也。事有礼而礼有文；礼者，义之文也。故曰：“失道而后失德，失德而后失仁，失仁而后失义，失义而后失礼。”</span>（“故曰”的话出自《老子·三十八章》，即“德篇”首章。今通行本的每小句都不含后一个“失”字，一般解释为“道失而后有（提倡）德”等。）</p>
+</div>
 </li>
 <li><p><a id="he2"></a><span class="lyterm">和</span>：适宜，协调，恰如其分。它的繁体字是龢，本义为伴随着排箫协调地唱，读作<span class="lypinyin">hè</span>。<span class="lyexample"><span>【例】</span><span>成语“一唱一和”。</span></span></p></li>
 <li>
@@ -2092,7 +2095,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“巧言、令色、足恭，左丘明耻之，丘亦耻之。匿怨而友其人，左丘明耻之，丘亦耻之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="zugong"></a><span class="lyterm">足恭</span>：指过分恭顺，即谄媚巴结。</p></li>
-<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，一般认为与孔子同时稍晚，生平不详。据《汉书·司马迁传》，他是《左传》和《国语》的作者：<span class="lyq">及孔子因鲁史记而作《春秋》，而左丘明论辑其本事以为之传，又籑异同为《国语》。</span>（籑（<span class="lypinyin">zhuàn</span>）：颜师古注：<span class="lyq">与“撰”同。</span>）按司马迁《报任安书》的说法，他在编纂《国语》时已经失明了。而《汉书·刘歆传》说，<span class="lyq">歆以为左丘明好恶与圣人同，亲见夫子</span>，也许是根据本章的附会。</p></li>
+<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，一般认为与孔子同时稍晚，生平不详。据《汉书·司马迁传》，他是《左传》和《国语》的作者：<span class="lyq">及孔子因鲁史记而作《春秋》，而左丘明论辑其本事以为之传，又籑异同为《国语》。</span>（籑（<span class="lypinyin">zhuàn</span>）：颜师古注：<span class="lyq">与“撰”同。</span>从文风看，《国语》更像是纂辑成的。）按司马迁《报任安书》的说法，他在修《国语》时已经失明了。而《汉书·刘歆传》说的<span class="lyq">歆以为左丘明好恶与圣人同，亲见夫子</span>，也许是根据本章的附会。</p></li>
 <li><p><a id="chenghu"></a><span class="lyterm">丘</span>：孔子的自称。古代言谈中自称己名，表示谦逊。父对子、师对徒，也常直呼其名。但直称长辈或平辈的名是不礼貌的，至少很不正式（平辈的情况），正式应该称对方的字（<span class="lykeyword">表字</span>，常与名的意义相关）。唐宋起又流行用号（<span class="lykeyword">别号</span>），可以有不止一个，可以自拟或受赠，较为风雅。注意观察《论语》中不同关系、不同环境的称呼，容易理解礼仪上的区别。<span class="lyexample"><span>【例】</span><span>诸葛亮《前出师表》：<span class="lyq">臣亮言：先帝创业未半而中道<a href="#hong1">崩</a>殂……</span>（殂（<span class="lypinyin">cú</span>）：死。）</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》：<span class="lyq">幼名，冠字，五十以伯仲，死谥，周道也。</span>《颜氏家训·风操》：<span class="lyq">古者，名以正体，字以表德，名终则讳之，字乃可以为孙氏。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -5465,7 +5468,7 @@ img.characterimg {
 </ul></div>
 </div>
 <a id="16"></a><h1 class="lybodychapter">16. 季氏</h1>
-<p>本篇均称“孔子”而非“子”，行文风格也与之前不同，故有认为并非孔子亲传弟子所记，或出自齐论语。也有怀疑从本篇开始的后5篇，是后来增补的。</p>
+<p>本篇均称“孔子”而非“子”，行文风格也与之前不同，故有认为并非孔子亲传弟子所记，或出自齐论语。也有怀疑从本篇开始的末5篇，是后来增补的。</p>
 <a id="16.1"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#16.1">16.1</a></div>
 <div class="lybloboriginaltext">
@@ -6319,7 +6322,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zigong">子贡</a>曰：“君子之过也，如日月之食焉：过也，人皆见之；更也，人皆仰之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">更</span>（<span class="lypinyin">gēng</span>）：改，改正。这里的<span class="lyterm">君子</span>，当是指孔子。</p></li>
-<li><p><span class="lyterm">仰</span>：本义为抬头，引申为仰望，敬慕，这是很自然的比喻用法。<a id="gaoshanyangzhi"></a><span class="lyexample"><span>【例】</span><span>《诗经·小雅·车辖》：<span class="lyq">高山仰止，景行行（<span class="lypinyin">háng xíng</span>）止。</span>（止：句末助词，带有肯定的意味。景行：大路。）</span></span><span class="lyseealso"><span>【参】</span><span><a href="#7.31" class="lyref">7.31</a> </span></span></p></li>
+<li><p><span class="lyterm">仰</span>：本义为抬头，引申为仰望，敬慕，这是很自然的比喻用法。<a id="gaoshanyangzhi"></a><span class="lyexample"><span>【例】</span><span>《诗经·小雅·车辖》：<span class="lyq">高山仰止，景行行（<span class="lypinyin">háng xíng</span>）止。</span>（止：句末助词，带有肯定的意味。景行：大路。）</span></span><span class="lyseealso"><span>【参】</span><span><a href="#7.31" class="lyref">7.31</a> <span class="lyq">丘也幸，苟有过，人必知之。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="19.22"></a><div class="lyblob">
@@ -6335,7 +6338,7 @@ img.characterimg {
 <p>《论语》中，仅有本章至 <a href="#19.25" class="lyref">19.25</a>  的4章称呼孔子的字<span class="lyterm">仲尼</span>，从交谈内容和 <a href="#19.25" class="lyref">19.25</a> <span class="lyq">其生也荣，其死也哀</span>的评价看，这些对话可能发生在孔子去世之后。</p>
 </li>
 <li><p><span class="lyterm">文武之道</span>：指周文王、周武王的治国之道及其礼乐典章。<span class="lyexample"><span>【例】</span><span>成语“文武之道，一张一弛”的来历，参见 <a href="#10.13" class="lyref">10.13</a> <a href="#zhaji">所引</a>《礼记》。</span></span></p></li>
-<li><p><span class="lyterm">未坠于地，在人</span>：指（虽然年代遥远，但）尚未磨灭，仍由人传承，体现在社会生活中。<span class="lyterm">坠</span>：落下，引申有丧失、损毁的意思。<span class="lyexample"><span>【例】</span><span>《史记·封禅书》索隐述赞：<span class="lyq">汉承遗绪，<a href="#sidao">斯道</a>不坠。</span>（<a id="xu4b"></a>绪：前人未完成的功业。）</span></span><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq"><a href="#aigong">哀公</a>问政。子曰：“文武之政，布在方策。其人存，则其政举；其人亡，则其政息。……故为政在人，取人以身，修身以道，修道以仁。”</span>（<a href="#jiandu"><a href="#jiandu">方</a><a href="#ce4a">策</a></a>：政策礼教的典籍。其人：指传承文武之道者。孔子这句话，本意是强调贤人为政的重要，可后来“人存政举、人亡政息”多指政策缺乏持续性、前瞻性，人走茶凉。）元代胡三省的《资治通鉴》注序中，认为<a href="#liujing">六经</a>之外，历史也有“载道”的作用：<span class="lyq">夫道无不在，散于事为之间。因事之得失成败，可以知道之万世亡弊，史可少欤！</span></span></span></p></li>
+<li><p><span class="lyterm">未坠于地，在人</span>：指（虽然年代遥远，但）尚未磨灭，仍由人传承，体现在社会生活中。<span class="lyterm">坠</span>：落下，引申有丧失、损毁的意思。<span class="lyexample"><span>【例】</span><span>《史记·封禅书》索隐述赞：<span class="lyq">汉承遗绪，<a href="#sidao">斯道</a>不坠。</span>（<a id="xu4b"></a>绪：前人未完成的功业。）</span></span><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq"><a href="#aigong">哀公</a>问政。子曰：“文武之政，布在方策。其人存，则其政举；其人亡，则其政息。……故为政在人，取人以身，修身以道，修道以仁。”</span>（<a href="#jiandu">方</a><a href="#ce4a">策</a>：政策礼教的典籍。其人：指传承文武之道者。孔子这句话，本意是强调贤人为政的重要，可后来“人存政举、人亡政息”多指政策缺乏持续性、前瞻性，人走茶凉。）元代胡三省的《资治通鉴》注序中，认为<a href="#liujing">六经</a>之外，历史也有“载道”的作用：<span class="lyq">夫道无不在，散于事为之间。因事之得失成败，可以知道之万世亡弊，史可少欤！</span></span></span></p></li>
 <li><p><span class="lyterm">常师</span>：固定的老师。<span class="lyseealso"><span>【参】</span><span><a href="#7.22" class="lyref">7.22</a> 。韩愈《师说》：<span class="lyq">圣人无常师。孔子师郯子、苌弘、<a href="#shixiang">师襄</a>、老聃。郯子之徒，其贤不及孔子。</span>（郯子：<a href="#tianzishiguan">郯国</a>国君，孔子曾向他请教官名。苌（<span class="lypinyin">cháng</span>）弘：春秋时贤大夫，孔子曾向他问乐。老聃（<span class="lypinyin">dān</span>）：即老子，孔子曾向他问礼。）</span></span></p></li>
 </ul></div>
 </div>
@@ -6771,6 +6774,7 @@ img.characterimg {
 <p><span class="lybook">《孔子家语》</span>，〔三国魏〕王肃编著，王国轩、王秀梅译注，中华书局，中华经典名著全本全注全译丛书，2011年。</p>
 <p><span class="lybook">《老子·庄子·列子》</span>，张震点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><a id="laozizhuyi"></a><span class="lybook">《老子注译》</span>，高亨著，华钟彦校，河南人民出版社，1980年。《老子》版本繁多，文字、断句屡有分歧，难辨原委，本书引文均据此本。</p>
+<p><span class="lybook">《老子今注今译》</span>（参照简帛本最新修订版），陈鼓应注译，商务印书馆，2003年。</p>
 <p><span class="lybook">《庄子》</span>，方勇译注，中华书局，中华经典名著全本全注全译丛书，2010年。</p>
 <p><span class="lybook">《管子通解》</span>，赵守正撰，北京经济学院出版社，1989年。</p>
 <p><span class="lybook">《晏子春秋译注》</span>，孙彦林、周民、苗若素译注，齐鲁书社，1991年。</p>
