--- a/aboly.html
+++ b/aboly.html
@@ -10,7 +10,7 @@ permalink: /aboly
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>一瓶论语</title>
-<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.min.css">
 <style>
 body {
     font-family: Helvetica, sans-serif;
@@ -288,8 +288,8 @@ img.characterimg {
     }
 }
 </style>
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <script>
 (function() {
     // Random jump.
@@ -4168,9 +4168,9 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">棘子成</span>：卫国大夫。后面的<span class="lyterm">夫子</span>指的也是他。</p></li>
 <li><p><span class="lyterm"><a href="#heyi">何以</a></span>：为什么，why。这个含义也经常用于反问句表示否定。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">何以伐为？</span></span></span></p></li>
-<li><p><span class="lyterm">驷（<span class="lypinyin">sì</span>）不及舌</span>：指话一说出口，就算快马也追不回来了。<a id="si4"></a>春秋时每<a href="#sheng4a">乘</a>车套4匹马来拉，称为<span class="lyterm">驷</span>。后有成语“一言既出，驷马难追”。<span class="lyseealso"><span>【参】</span><span><a href="#11.6" class="lyref">11.6</a> </span></span></p></li>
-<li><p><a id="you2"></a><span class="lyterm">犹</span>：如，同，指同等重要。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">犹之与人也，出纳之吝，谓之有司。</span>《资治通鉴·后周太祖三年》（953年）：<span class="lyq">利在于民，犹在国也。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#6.18" class="lyref">6.18</a> <a href="#15.18" class="lyref">15.18</a> </span></span></p></li>
-<li><p><span class="lyterm">鞟</span>（<span class="lypinyin">kuò</span>）：<a href="#ge2">革</a>，加工去毛的兽皮，这里比喻缺少了文的光秃秃的质。</p></li>
+<li><p><span class="lyterm">驷（<span class="lypinyin">sì</span>）不及舌</span>：指话一说出口，就算快马也追不回来了。<a id="si4"></a>春秋时每<a href="#sheng4a">乘</a>车套4匹马来拉，称为<span class="lyterm">驷</span>。后有成语“一言既出，驷马难追”。<span class="lyseealso"><span>【参】</span><span><a href="#11.6" class="lyref">11.6</a> <span class="lyq">三复“白圭”</span>。</span></span></p></li>
+<li><p><a id="you2"></a><span class="lyterm">犹</span>：如，同，指同等重要。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">犹之与人也，出纳之吝，谓之有司。</span>《资治通鉴·后周太祖三年》（953年）：<span class="lyq">利在于民，犹在国也。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#6.18" class="lyref">6.18</a> <span class="lyq">文质彬彬，然后君子</span>，<a href="#15.18" class="lyref">15.18</a> <span class="lyq">君子义以为质，礼以行之，孙以出之，信以成之</span>。</span></span></p></li>
+<li><p><span class="lyterm">鞟</span>（<span class="lypinyin">kuò</span>）：<a href="#ge2">革</a>，加工去毛的兽皮，这里比喻缺少了文的光秃秃的质。<span class="lyseealso"><span>【参】</span><span>清代沈德潜所编《唐宋八大家文》前言中，将唐宋八家之文比作春<a href="#hua1">华</a>，将探讨天理人性哲学的周敦颐至程颢的宋五子之书比作秋实。认为<span class="lyq">天下无骛春华而弃秋实者，亦即无舍春华而求秋实者</span>；应将八家文<span class="lyq">悉融会于一心一手之间，……夫而后去华<a href="#jiu4a">就</a>实，归根返约</span>；<span class="lyq">若舍华就实，而徒敝敝焉，约取夫朴学之指归，穷其流弊，恐有等于兽皮之鞟者。吾未见兽皮之鞟，<a href="#huo4">或</a>贤于虚车之饰者也。</span>（骛（<span class="lypinyin">wù</span>）：追求。朴学：注重考据的清代儒学。指归：主旨，大意。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="12.9"></a><div class="lyblob">
@@ -6122,7 +6122,7 @@ img.characterimg {
 <li><p><span class="lyterm">逸</span>：本义为逃跑，可引申为隐遁，也可引申为超越。<span class="lyexample"><span>【例】</span><span>北宋周敦颐《爱莲说》：<span class="lyq">予谓菊，花之隐逸者也。</span></span></span><a id="yimina"></a><span class="lyterm">逸民</span>：又作“佚民”，避世隐居的人（特指灭国后的遗老遗少），或理解为皇侃《论语义疏》说的<span class="lyq">民中节行超逸不拘于世者</span>。<span class="lyseealso"><span>【参】</span><span>《新元史·隐逸传》认为，<span class="lyq">孔子称为逸民者七人</span>以后，<span class="lyq">列于隐逸者，其人有二：惓惓故国，不仕新朝，自附于<a href="#boyishuqi">夷、齐</a>者也；穷居伏处，修天爵而不受人爵，合于《蛊》上九之义者也。</span>（惓惓（<span class="lypinyin">quán</span>）：念念不忘。天爵、人爵：《孟子·告子上》：<span class="lyq">仁义忠信，乐善不倦，此天爵也；公卿大夫，此人爵也。</span>《蛊》（<span class="lypinyin">gǔ</span>）上九：即《周易·蛊》卦上九爻：<span class="lyq">不<a href="#shi4f">事</a>王侯，高尚<a href="#qi2">其</a>事。</span>）</span></span></p></li>
 <li><p><span class="lyterm">虞仲</span>、<span class="lyterm">夷逸</span>、<span class="lyterm">朱张</span>：事迹均不详。《礼记·杂记下》提到过<span class="lyterm">少连</span>：<span class="lyq">孔子曰：“少连、大连善居丧，三日不怠，三月不解，<a href="#ji1">期</a>悲哀，<a href="#sannianzhisang">三年</a>忧。<a href="#yidihuaxia">东夷</a>之子也。”</span></p></li>
 <li><p><span class="lyterm">降<a href="#qi2">其</a>志</span>是思想上降低自己的志向，<span class="lyterm">辱其身</span>是行为上损伤自己的尊严。</p></li>
-<li><p><span class="lyterm">言<a href="#zhong4">中</a><a href="#lun2">伦</a>，行中虑</span>：说话符合伦理规范，行为经过深思熟虑。柳下惠的事迹见 <a href="#18.2" class="lyref">18.2</a> 。<span class="lyseealso"><span>【参】</span><span>伯夷、柳下惠又被合称为“夷惠”，都是正派人物，但行为反差很大：前者宁死不食周粟，后者不以君污官小避世，《孟子·公孙丑上》指摘<span class="lyq">伯夷隘，柳下惠不恭</span>。孔子把柳下惠也列为逸民，扬雄《法言·渊骞》认为他是“朝隐”。《论语义疏》引晋太常博士张凭言：<span class="lyq">彼被禄仕者乎？其处朝也，唯言不废大伦，行不犯色，思虑而已，岂以世务暂婴其心哉！所以为逸民。</span>（婴：纠扰。）</span></span></p></li>
+<li><p><span class="lyterm">言<a href="#zhong4">中</a><a href="#lun2">伦</a>，行中虑</span>：说话符合伦理规范，行为经过深思熟虑。柳下惠的事迹见 <a href="#18.2" class="lyref">18.2</a> 。<span class="lyseealso"><span>【参】</span><span>伯夷、柳下惠又被合称为“夷惠”，都是正面人物，但行为反差很大：前者宁死不食周粟，后者不以君污官小避世，《孟子·公孙丑上》指摘<span class="lyq">伯夷隘，柳下惠不恭</span>。孔子把柳下惠也列为逸民，扬雄《法言·渊骞》认为他是“朝隐”。《论语义疏》引晋太常博士张凭言：<span class="lyq">彼被禄仕者乎？其处朝也，唯言不废大伦，行不犯色，思虑而已，岂以世务暂婴其心哉！所以为逸民。</span>（婴：纠扰。）</span></span></p></li>
 <li><p><span class="lyterm">放言</span>：指不议论世事。<span class="lyterm">放</span>：舍弃，废置。这是古注比较一致的解释，今注本也有解为肆意狂言，结合上下文和历史实例看似乎不妥。现代汉语的“放言”则指放纵言论，想说就说。<span class="lyseealso"><span>【参】</span><span>《史记·晋世家》载，<a href="#jinwengong">晋文公</a>继位后遍赏功臣，介子推一直随他流亡，又有割股为食之恩，但耻于言禄，禄亦不及，遂将隐居深山。介母说应使文公知其不公，子推回答：<span class="lyq">“言，身之<a href="#wen2">文</a>也。身欲隐，安用文之？文之，是求显也。”</span>至死不见文公。</span></span></p></li>
 <li><p><span class="lyterm">身中清，废中<a href="#quan2">权</a></span>：立身做人合乎清白，隐居不用也能权宜避害。</p></li>
 <li>
