Minor updates. Happy Chinese New Year!

--- a/aboly.html
+++ b/aboly.html
@@ -889,18 +889,18 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“为政以德，譬如北辰，居其所而众星共之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">dé</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现“德”字而有“徝”（<span class="lypinyin">zhì</span>）字，表示视正行直。金文加心成“德”，有时还省去“彳”旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>时，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，“有德”又成为无可回避的标准。</p>
+<p><a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">dé</span>），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现“德”字而有“徝”（<span class="lypinyin">zhì</span>）字，表示视正行直。金文加心成“德”，有时还省去“彳”旁，突出心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>时，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，“有德”又成为无可回避的标准。</p>
 <a id="dezhi"></a><div class="lyseealso">
 <p><span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的贤人政治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了“父母官”、“爱民如子”的说法。《大学》：<span class="lyq">《诗》云：“乐<a href="#zhi1a">只</a>君子，民之父母。”民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经·小雅·南山有台》。）《论语》多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经·圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书·周书·蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span></p>
 <p><a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子·任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。……君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰“法”。……君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书·开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子·难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，……吾所以为言势者，中也。……抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span></p>
 <p>传统政治实践中，德治与法治相为补益。《孟子·离娄上》认为：<span class="lyq">徒善不足以为政，徒法不能以自行。</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）《汉书·元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">“陛下持刑太深，宜用儒生。”宣帝作色曰：“汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教、用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？”</span></p>
-<p>教化宣传中，则多偏重德礼，轻视普法，效果往往适得其反。《大戴礼记·礼察》说：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。“法禁于已然之后”的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）用1980年8月邓小平讲话“党和国家领导制度的改革”中的说法：<span class="lyq">制度问题不解决，思想作风问题也解决不了</span>。<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
+<p>日常的宣传教化多偏重德礼，轻视普法，效果往往适得其反。《大戴礼记·礼察》说：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。“法禁于已然之后”的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）用1980年8月邓小平讲话“党和国家领导制度的改革”中的说法：<span class="lyq">制度问题不解决，思想作风问题也解决不了</span>。<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
 </div>
 </li>
 <li>
 <p><span class="lyterm">北辰</span>：即北极星，是北半球肉眼可见的亮星中最接近地球自转轴的，古人认为它恒定不动，视为众星之主，用以比喻帝王或众望所归者，又称为帝星、紫微星。<span class="lyterm">辰</span>既可泛指众星，又可专指北辰，例如“辰极”也是北极星、帝王的意思。</p>
 <div class="lyseealso">
-<p><span>【参】</span><span>北极星所在的位置称为“宸”（<span class="lypinyin">chén</span>），引申为尊称帝王的居所、帝位或帝王本身，例如“宸断”指帝王的决定。近似地，“陛下”是用（奏报于）宫殿台阶之下来恭敬地指称帝王。</span></p>
+<p><span>【参】</span><span>北极星所在的位置称为“宸”（<span class="lypinyin">chén</span>），引申为尊称帝王的居所、帝位或帝王本身，例如“宸断”指帝王的决定。类似地，“陛下”是用（奏报于）宫殿台阶之下来尊称帝王。</span></p>
 <p>根据现代天文学，由于太阳和其它天体的引力，地球的自转轴也在缓慢旋转，约25800年转过一周，所以北极星并不固定。孔子当时的北极星是小熊座β。约500年，祖暅（<span class="lypinyin">gèng</span>，数学家祖冲之之子）观测到北极星偏离真北极1度多，当时的北极星是鹿豹座32H，也是迄今最暗的北极星。现代的北极星是小熊座α。</p>
 </div>
 </li>
@@ -1131,7 +1131,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><span class="lyterm">举直错诸枉</span>：把正直君子安排在比邪曲小人高的职位上。<a id="ju3"></a><span class="lyterm">举</span>：选用，推荐。<a id="cuo4"></a><span class="lyterm">错</span>：通“措”，放置，安放。<a id="wang3c"></a><span class="lyterm">枉</span>：弯曲，不直。<span class="lyexample"><span>【例】</span><span><a href="#18.2" class="lyref">18.2</a> <span class="lyq">枉道而事人，何必去父母之邦？</span></span></span></p>
-<p><span class="lyseealso"><span>【参】</span><span>《三国志·蜀书·先主备》裴松之注引刘备敕刘禅遗诏：<span class="lyq">惟<a href="#xian2">贤</a>惟<a href="#de2">德</a>，能服于人。</span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：“无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。”夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（<a id="fu4a"></a>傅：附，加。）这也对应于《史记·老子韩非列传》痛恨的<span class="lyq">治国不务修明其法制，……富国强兵而以求人任贤，反举浮淫之蠹而加之于功实之上，……所养非所用，所用非所养</span>，才会落到 <a href="#19.19" class="lyref">19.19</a> <span class="lyq">民散久矣</span>的田地。</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《三国志·蜀书·先主备》裴松之注引刘备敕刘禅遗诏：<span class="lyq">惟<a href="#xian2">贤</a>惟<a href="#de2">德</a>，能服于人。</span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：“无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。”夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（<a id="fu4a"></a>傅：附，加。引文见今本《逸周书·寤儆解》，而非《<a href="#shangshu">尚书</a>·周书》。）这也对应于《史记·老子韩非列传》痛恨的<span class="lyq">治国不务修明其法制，……富国强兵而以求人任贤，反举浮淫之蠹而加之于功实之上，……所养非所用，所用非所养</span>，才会落到 <a href="#19.19" class="lyref">19.19</a> <span class="lyq">民散久矣</span>的田地。</span></span></p>
 </li></ul></div>
 </div>
 <a id="2.20"></a><div class="lyblob">
@@ -1411,7 +1411,7 @@ img.characterimg {
 <p>子曰：“不然。获罪于天，无所祷也。”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">媚</span>：取悦，迎合。这句引语的出处不详。</p></li>
+<li><p><span class="lyterm">媚</span>：取悦，迎合。这句引语的出处不详。后来的俗语“不怕官，只怕管”，就很直接了。</p></li>
 <li>
 <p><span class="lyterm">奥</span>：指奥神，这是其本义，确切来历已失传，只知道受祭于室内西南角，于是西南角也称为奥，是室内的尊位。这里喻指名位尊贵但不起实际作用的人，难以确考是谁，有认为指<a href="#6.28">子见南子</a>一事。</p>
 <p>后来，“奥”泛指室内深处，逐渐“深奥”并用。“奥援”就是内部或暗中的助力，内应；“<a href="#shengtangrushi">堂</a>奥”指高深的道理或境界。</p>
@@ -3141,7 +3141,7 @@ img.characterimg {
 <li><p> 稽（<span class="lypinyin">qǐ</span>）首：跪坐后双手交叠伏地，缓缓叩头，至手前稍停。这是最重的拜礼，用于下对上的礼敬，如祭拜神灵祖先、臣拜君、子拜父、徒拜师，以及新婚夫妻拜天地。后来道士单手立掌躬身行礼也称为稽首，但不是一回事。<span class="lyexample"><span>【例】</span><span>《左传·僖公二十三年》（前637年），公子<a href="#jinwengong">重耳</a>流离至卫国乡间，<span class="lyq">乞食于<a href="#yeren">野人</a>，野人与之〔土〕块。公子怒，欲鞭之。子犯曰：“天赐也。”稽首，受而载之。</span>这是向天稽首，感谢赐予国土的好兆头。</span></span><span class="lyseealso"><span>【参】</span><span>《白虎通·姓名》：<span class="lyq">人所以相拜者何？所以表情见意，屈节卑体，尊事人者也。拜之言服也。……必稽首何？敬之至也，头至地。</span></span></span></p></li>
 <li><p> 顿首：姿势同稽首，头较快触地即起，有点像现代的磕头。这是次重的拜礼，用于同级平辈间，庄重但不卑下。动作较急促，所以常带有强烈的感情色彩，如恳请、感激、哀痛、惶恐、谢罪等。后来泛用于表奏信函首尾，表示郑重致敬。<a id="shenbaoxu"></a><span class="lyexample"><span>【例】</span><span>《左传·定公四年》（前506年），楚国大夫申包胥不饮不食7日哭于秦廷，求兵救楚：<span class="lyq">秦哀公为之赋《无衣》，〔申包胥〕九顿首而坐，秦师乃出。</span>（为国出使，故不稽首。《无衣》见于《诗经·秦风》。）南宋绍兴六年（1136年）末，学者胡安国写成《春秋传》，进表开头一段和结尾都说：<span class="lyq">臣安国诚皇诚恐，顿首顿首。</span>东晋王羲之写给友人的《丧乱帖》，首末都是<span class="lyq">羲之顿首。</span></span></span></p></li>
 <li>
-<p> 空首：跪坐后拱手于胸，俯头至手，又称“拜手”，也就是没有上下文的普通的<span class="lykeyword">拜</span>。它是上对下稽首的答礼，又作为常礼使用，程度上近似于现代的鞠躬。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>等，敬意更深，但止于四拜。“百拜”是后起的客套话。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> 。《左传·哀公十七年》（前478年），<a href="#aigong">鲁哀公</a>与齐平公会盟，<span class="lyq"><a href="#mengwubo">孟武伯</a><a href="#xiang4">相</a>。齐侯稽首，公拜。齐人怒。武伯曰：“非天子，寡君无所稽首。”</span>武伯之父<a href="#mengyizi">孟懿子</a>曾向孔子学礼，这次就有了实效，占了强邻的上风，让齐人耿耿于怀。</span></span></p>
+<p> 空首：跪坐后拱手于胸，俯头至手，又称“拜手”，也就是没有上下文的普通的<span class="lykeyword">拜</span>。它是上对下稽首的答礼，又作为常礼使用，程度上近似于现代的鞠躬。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>等，敬意加深，但最多四拜。“百拜”是后起的客套话。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> 。《左传·哀公十七年》（前478年），<a href="#aigong">鲁哀公</a>与齐平公会盟，<span class="lyq"><a href="#mengwubo">孟武伯</a><a href="#xiang4">相</a>。齐侯稽首，公拜。齐人怒。武伯曰：“非天子，寡君无所稽首。”</span>武伯之父<a href="#mengyizi">孟懿子</a>曾向孔子学礼，这次就有了实效，占了强邻的上风，让齐人耿耿于怀。</span></span></p>
 <p><a id="zaibaiqishou"></a><span class="lykeyword">再拜稽首</span>是两次空首再加稽首，比稽首更隆重。</p>
 </li>
 </ul>
@@ -6122,7 +6122,7 @@ img.characterimg {
 <li><p><span class="lyterm">逸</span>：本义为逃跑，可引申为隐遁，也可引申为超越。<span class="lyexample"><span>【例】</span><span>北宋周敦颐《爱莲说》：<span class="lyq">予谓菊，花之隐逸者也。</span></span></span><a id="yimina"></a><span class="lyterm">逸民</span>：又作“佚民”，避世隐居的人（特指灭国后的遗老遗少），或理解为皇侃《论语义疏》说的<span class="lyq">民中节行超逸不拘于世者</span>。<span class="lyseealso"><span>【参】</span><span>《新元史·隐逸传》认为，<span class="lyq">孔子称为逸民者七人</span>以后，<span class="lyq">列于隐逸者，其人有二：惓惓故国，不仕新朝，自附于<a href="#boyishuqi">夷、齐</a>者也；穷居伏处，修天爵而不受人爵，合于《蛊》上九之义者也。</span>（惓惓（<span class="lypinyin">quán</span>）：念念不忘。天爵、人爵：《孟子·告子上》：<span class="lyq">仁义忠信，乐善不倦，此天爵也；公卿大夫，此人爵也。</span>《蛊》（<span class="lypinyin">gǔ</span>）上九：即《周易·蛊》卦上九爻：<span class="lyq">不<a href="#shi4f">事</a>王侯，高尚<a href="#qi2">其</a>事。</span>）</span></span></p></li>
 <li><p><span class="lyterm">虞仲</span>、<span class="lyterm">夷逸</span>、<span class="lyterm">朱张</span>：事迹均不详。《礼记·杂记下》提到过<span class="lyterm">少连</span>：<span class="lyq">孔子曰：“少连、大连善居丧，三日不怠，三月不解，<a href="#ji1">期</a>悲哀，<a href="#sannianzhisang">三年</a>忧。<a href="#yidihuaxia">东夷</a>之子也。”</span></p></li>
 <li><p><span class="lyterm">降<a href="#qi2">其</a>志</span>是思想上降低自己的志向，<span class="lyterm">辱其身</span>是行为上损伤自己的尊严。</p></li>
-<li><p><span class="lyterm">言<a href="#zhong4">中</a><a href="#lun2">伦</a>，行中虑</span>：说话符合伦理规范，行为经过深思熟虑。柳下惠的事迹见 <a href="#18.2" class="lyref">18.2</a> 。<span class="lyseealso"><span>【参】</span><span>伯夷、柳下惠又被合称为“夷惠”，都是正面人物，但行为反差很大：前者宁死不食周粟，后者不以君污官小避世，《孟子·公孙丑上》指摘<span class="lyq">伯夷隘，柳下惠不恭</span>。孔子把柳下惠也列为逸民，扬雄《法言·渊骞》认为他是“朝隐”。《论语义疏》引晋太常博士张凭言：<span class="lyq">彼被禄仕者乎？其处朝也，唯言不废大伦，行不犯色，思虑而已，岂以世务暂婴其心哉！所以为逸民。</span>（婴：纠扰。）</span></span></p></li>
+<li><p><span class="lyterm">言<a href="#zhong4">中</a><a href="#lun2">伦</a>，行中虑</span>：说话符合伦理规范，行为经过深思熟虑。柳下惠的事迹见 <a href="#18.2" class="lyref">18.2</a> 。<span class="lyseealso"><span>【参】</span><span>伯夷、柳下惠又被合称为“夷惠”，都是正面人物，但行为反差很大：前者宁死不食周粟，后者不以君污官小避世，《孟子·公孙丑上》指摘<span class="lyq">伯夷隘，柳下惠不恭</span>。孔子把柳下惠也列为逸民，扬雄《法言·渊骞》认为他是“朝隐”。《论语义疏》引晋太常博士张凭的话：<span class="lyq">彼被禄仕者乎？其处朝也，唯言不废大伦，行不犯色，思虑而已，岂以世务暂婴其心哉！所以为逸民。</span>（婴：纠扰。）</span></span></p></li>
 <li><p><span class="lyterm">放言</span>：指不议论世事。<span class="lyterm">放</span>：舍弃，废置。这是古注比较一致的解释，今注本也有解为肆意狂言，结合上下文和历史实例看似乎不妥。现代汉语的“放言”则指放纵言论，想说就说。<span class="lyseealso"><span>【参】</span><span>《史记·晋世家》载，<a href="#jinwengong">晋文公</a>继位后遍赏功臣，介子推一直随他流亡，又有割股为食之恩，但耻于言禄，禄亦不及，遂将隐居深山。介母说应使文公知其不公，子推回答：<span class="lyq">“言，身之<a href="#wen2">文</a>也。身欲隐，安用文之？文之，是求显也。”</span>至死不见文公。</span></span></p></li>
 <li><p><span class="lyterm">身中清，废中<a href="#quan2">权</a></span>：立身做人合乎清白，隐居不用也能权宜避害。</p></li>
 <li>
