--- a/aboly.html
+++ b/aboly.html
@@ -573,7 +573,7 @@ img.characterimg {
 <li>
 <p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
 <p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
-<p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
+<p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并称，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
 </ul></div>
 <div class="lyblobremark">
@@ -1498,7 +1498,7 @@ img.characterimg {
 <li><p><span class="lyterm">社</span>：土地神，这里指土地神的木制牌位，也叫神主。</p></li>
 <li><p><span class="lyterm">夏后氏</span>：指<a href="#xiachao">夏朝</a>人。</p></li>
 <li><p><a id="yue1a"></a><span class="lyterm">曰‘使民战栗’</span>里的<span class="lyterm">曰</span>，意思是称为，叫做，说法是。</p></li>
-<li><p><span class="lyterm">遂事不谏</span>（<span class="lypinyin">jiàn</span>）：已经结束的事，就不要去挽回了。<a id="sui4"></a><span class="lyterm">遂</span>：完成，终结。<a id="jian4c"></a><span class="lyterm">谏</span>：本义为下对上的规劝，引申为挽回，纠正。<span class="lyexample"><span>【例】</span><span>陶潜《归去来兮辞》：<span class="lyq">悟已往之不谏，知来者之可追。</span>（不可挽回，can't，而前者意在 don't，所以加了个“要”。）</span></span></p></li>
+<li><p><span class="lyterm">遂事不谏</span>（<span class="lypinyin">jiàn</span>）：已经结束的事，就不要去挽回了。<a id="sui4"></a><span class="lyterm">遂</span>：完成，终结。<a id="jian4c"></a><span class="lyterm">谏</span>：本义为下对上的规劝，引申为挽回，纠正。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">往者不可谏，来者犹可追。</span>陶潜《归去来兮辞》：<span class="lyq">悟已往之不谏，知来者之可追。</span>（这里的“不谏”指不可挽回，can't，而本章意在 don't，所以译文加了个“要”。）</span></span></p></li>
 <li><p><span class="lyterm">既往不咎</span>（<span class="lypinyin">jiù</span>）：已经过去的事，就不要再责怪了。<a id="jiu4"></a><span class="lyterm">咎</span>：本义为灾祸，用作动词，责怪，追究罪责。成语“既往不咎”指将过去犯下的错误一笔勾销，不再追究。</p></li>
 </ul>
 <p>孔子对宰予的批评，在于“使民战栗”上。君子<a href="#13.21">有所为有所不为</a>，与人君对答不可不慎，应多劝以仁政爱民，而不是充当直筒子背书的<a href="#2.12">机器</a>。<span class="lyseealso"><span>【参】</span><span>清代方观旭《论语偶记》：<span class="lyq">宰我因社主之义而起哀公威民之心。</span></span></span></p>
@@ -1821,7 +1821,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#4.26">4.26</a></div>
 <div class="lybloboriginaltext"><p><a href="#ziyou">子游</a>曰：“事君数，斯辱矣；朋友数，斯疏矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">数</span>（<span class="lypinyin">shuò</span>）：多次，屡次，这里指过于殷勤琐碎，让人烦不胜烦。<span class="lyseealso"><span>【参】</span><span>比较 <a href="#3.18" class="lyref">3.18</a> ，体会与人交往的分寸。</span></span></p></li>
+<li><p><a id="shuo4"></a><span class="lyterm">数</span>（<span class="lypinyin">shuò</span>）：多次，屡次，这里指过于殷勤琐碎，让人烦不胜烦。<span class="lyseealso"><span>【参】</span><span>比较 <a href="#3.18" class="lyref">3.18</a> ，体会与人交往的分寸。</span></span></p></li>
 <li><p><span class="lyterm">疏</span>：不亲近，疏远。</p></li>
 </ul></div>
 </div>
@@ -5026,8 +5026,8 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><span class="lyterm">以德报怨</span>：用恩德回报（别人带给自己的）仇怨。</p></li>
-<li><p><span class="lyterm">直</span>：公正，正直，客观无私。</p></li>
+<li><p><span class="lyterm">以德报<a href="#yuan4a">怨</a></span>：用恩德回报（别人带给自己的）仇怨。<a id="de2b"></a><span class="lyterm">德</span>：恩惠。<span class="lyexample"><span>【例】</span><span>成语“感恩戴德”。</span></span></p></li>
+<li><p><span class="lyterm">直</span>：公正，正直，不偏私。</p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>孔子对于“报”的态度和老子的柔己下人截然不同，比较《老子》第63章：<span class="lyq">大小多少，报怨以德。</span>（大小多少：以大为小，以多为少。）和基督教的屈己恕人也不同，比较《圣经·新约·马太福音》5:39—40：<span class="lyq">只是我告诉你们，不要与恶人作对。有人打你的右脸，连左脸也转过来由他打。有人想要告你，要拿你的里衣，连外衣也由他拿去。</span>（<span class="lyqe">But I say unto you, That ye resist not evil: but whosoever shall smite thee on thy right cheek, turn to him the other also. And if any man will sue thee at the law, and take away thy coat, let him have thy cloak also.</span>）</span></span></p>
 </div>
@@ -6059,7 +6059,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知道他的真名，所以根据他走近过孔子的车乘这件事，给他取了<span class="lyterm">接舆</span>的代称。</p></li>
 <li><p><span class="lyterm">凤</span>：喻指孔子。有匡时济世之才而不得其用，故称<span class="lyterm">德衰</span>，既含惋惜，又微讽孔子碌碌奔忙，不如避世保身。</p></li>
-<li><p><span class="lyterm">追</span>：补救，指用今后的正确行为弥补过去的谬误。</p></li>
+<li><p><span class="lyterm">追</span>：补救，指用今后的正确行为弥补过去的错误。<span class="lyexample"><span>【例】</span><span>《韩非子·用人》：<span class="lyq"><a href="#shuo4">数</a>以<a href="#de2b">德</a>追祸，是断手而续以玉也。</span>（以德追祸：用恩惠去补偿（对别人的）祸害，这与 <a href="#14.34" class="lyref">14.34</a> <span class="lyq">以德报怨</span>截然不同。）</span></span></p></li>
 <li><p><span class="lyterm">已<a href="#er2">而</a></span>：罢了吧，算了吧。</p></li>
 </ul></div>
 </div>
