--- a/aboly.html
+++ b/aboly.html
@@ -927,7 +927,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">政</span>：禁令，法规。</p></li>
 <li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。《说文解字》解释其本义为：<span class="lyq">禾麦吐穗上平也，象形。</span><span class="lyexample"><span>【例】</span><span>法家大成之作《韩非子·八经》说：<span class="lyq">设法度以齐民，信赏罚以尽民能。</span>另外，“齐民”还可以作名词，表示平民，齐就是同等。例如北魏贾思勰的农业技术名著《齐民要术》，命名就有双关之意。</span></span></p></li>
-<li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都要根据上下文具体解读。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
+<li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都需要结合上下文理解。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
 <li>
 <p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p>
 <p>“耻”在 <a href="#1.13" class="lyref">1.13</a> <span class="lyq">远耻辱也</span>里是蒙受羞辱之事，在“无耻”、“有耻”里则是做人的品质，相当于远耻辱之心。现代汉语中，无耻比有耻常用得多，是对人的品行很严厉的斥责。思考：英语口语的 what a shame，与 <a href="#8.13" class="lyref">8.13</a> <a href="#14.1" class="lyref">14.1</a>  中的<span class="lyq">耻也</span>含义相同吗？</p>
@@ -2944,7 +2944,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“士不可以不弘毅，任重而道远。仁以为己任，不亦重乎？死而后已，不亦远乎？”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize"><li><p><span class="lyterm">弘毅</span>：胸怀宽广，意志坚定。<span class="lyterm">弘</span>：广大。<a id="yi4i"></a><span class="lyterm">毅</span>：坚强果决。<a id="ren4a"></a><span class="lyterm">任</span>：责任，职责，其甲骨文字形为人负重物。</p></li></ul>
-<p><a id="yitianxiaweijiren"></a><span class="lyseealso"><span>【参】</span><span>《孟子·万章上》通过<a href="#yiyin">伊尹</a>从隐居到出仕，从自立到<a href="#6.30">立人</a>的转变，提出以天下<a href="#12.1">归仁</a>为己任，激励了一代又一代儒者：<span class="lyq">“与我处畎亩之中，由是以乐尧舜之道，吾岂若使是君为尧舜之君哉？吾岂若使是民为尧舜之民哉？吾岂若于吾身亲见之哉？天之生此民也，使先知觉后知，使先觉觉后觉也。予，天民之先觉者也；予将以斯道觉斯民也，非予觉之而谁也？”思天下之民，匹夫匹妇有不被尧舜之泽者，若己推而内之沟中，其自任以天下之重如此。</span>（畎（<span class="lypinyin">quǎn</span>）：田间的水沟。畎亩：指民间。被：覆盖，惠及。）苏轼《乐全先生文集叙》：<span class="lyq">呜呼，士不以天下之重自任，久矣！言语非不工也，政事文学非不敏且博也。然至于临大事，鲜不忘其<a href="#buwangqichu">故</a>、失其<a href="#shou3">守</a>者，其<a href="#qixiao">器小</a>也。</span></span></span></p>
+<p><a id="yitianxiaweijiren"></a><span class="lyseealso"><span>【参】</span><span>《孟子·万章上》通过<a href="#yiyin">伊尹</a>从隐居到出仕，从自立到<a href="#6.30">立人</a>的转变，提出以天下<a href="#12.1">归仁</a>为己任，激励了一代又一代儒者：<span class="lyq">“与我处畎亩之中，由是以乐尧舜之道，吾岂若使是君为尧舜之君哉？吾岂若使是民为尧舜之民哉？吾岂若于吾身亲见之哉？天之生此民也，使先知觉后知，使先觉觉后觉也。予，天民之先觉者也；予将以斯道觉斯民也，非予觉之而谁也？”思天下之民，匹夫匹妇有不被尧舜之泽者，若己推而内之沟中，其自任以天下之重如此。</span>（畎（<span class="lypinyin">quǎn</span>）：田间的水沟。畎亩：指民间。被：覆盖，惠及。）苏轼《乐全先生文集叙》：<span class="lyq">呜呼，士不以天下之重自任，久矣！言语非不工也，政事文学非不敏且博也，然至于临大事，鲜不忘其<a href="#buwangqichu">故</a>、失其<a href="#shou3">守</a>者，其<a href="#qixiao">器小</a>也。</span></span></span></p>
 </div>
 </div>
 <a id="8.8"></a><div class="lyblob">
@@ -2988,7 +2988,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“好勇疾贫，乱也。人而不仁，疾之已甚，乱也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="ji2"></a><span class="lyterm">疾</span>：痛恨，厌恶。从本义来看，疾是轻病，<a href="#bing4a">病</a>是重病，<span class="lyq">疾加也</span>（《说文解字》），二者都从名词疾病引申为动词担心；而<a href="#huan4">患</a>是从动词担心引申至名词疾病。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">君子疾夫舍曰“欲之”而必为之辞。</span>成语“深恶痛疾”。</span></span></p></li>
-<li><p><span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。<span class="lyseealso"><span>【参】</span><span><a href="#8.2" class="lyref">8.2</a> <span class="lyq">勇而无礼则乱。</span></span></span></p></li>
+<li><p><a id="luan4"></a><span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。<span class="lyseealso"><span>【参】</span><span><a href="#8.2" class="lyref">8.2</a> <span class="lyq">勇而无礼则乱。</span>《史记·屈原贾生列传》：<span class="lyq">《<a href="#shijing">小雅</a>》怨诽而不乱。</span>（不乱：指用意是好的。）</span></span></p></li>
 <li><p><span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语“不为已甚”指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> <span class="lyq">过犹不及。</span>《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span>苏轼《刑赏忠厚之至论》：<span class="lyq">《<a href="#shangshu">书</a>》曰：“罪疑惟轻，功疑惟重。与其杀不辜，宁失不经。”呜呼，尽之矣！可以赏，可以无赏，赏之过乎<a href="#ren2">仁</a>；可以罚，可以无罚，罚之过乎<a href="#yi4">义</a>。过乎仁，不失为君子；过乎义，则流而入于<a href="#ren3">忍</a>人。故仁可过也，义不可过也。</span>（引文出自《尚书·虞夏书·大禹谟》（伪），是<a href="#gaoyao">皋陶</a>回答<a href="#shun">舜帝</a>的话，其中还有：<span class="lyq"><a href="#6.2">临下以简</a>，<a href="#3.26">御众以宽</a>。……好生之德洽于民心，<a href="#shiyong">兹用</a>不犯于<a href="#yousi">有司</a></span>。不经：不合常法。流：变。）</span></span></p></li>
 </ul></div>
 </div>
@@ -5029,7 +5029,7 @@ img.characterimg {
 <li><p><span class="lyterm">以德报<a href="#yuan4a">怨</a></span>：用恩德回报（别人带给自己的）仇怨。<a id="de2b"></a><span class="lyterm">德</span>：恩惠。<span class="lyexample"><span>【例】</span><span>成语“感恩戴德”。</span></span></p></li>
 <li><p><span class="lyterm">直</span>：公正，正直，不偏私。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>孔子对于“报”的态度和老子的柔己下人截然不同，比较《老子》第63章：<span class="lyq">大小多少，报怨以德。</span>（大小多少：以大为小，以多为少。）和基督教的屈己恕人也不同，比较《圣经·新约·马太福音》5:39—40：<span class="lyq">只是我告诉你们，不要与恶人作对。有人打你的右脸，连左脸也转过来由他打。有人想要告你，要拿你的里衣，连外衣也由他拿去。</span>（<span class="lyqe">But I say unto you, That ye resist not evil: but whosoever shall smite thee on thy right cheek, turn to him the other also. And if any man will sue thee at the law, and take away thy coat, let him have thy cloak also.</span>）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>孔子对于“报”的态度和老子的柔己下人截然不同，比较《老子》第63章：<span class="lyq">大小多少，报怨以德。</span>（大小多少：以大为小，以多为少。）和基督教的屈己恕人也不同，比较《圣经·新约·马太福音》5:39—40：<span class="lyq">只是我告诉你们，不要与恶人作对。有人打你的右脸，连左脸也转过来由他打。有人想要告你，要拿你的里衣，连外衣也由他拿去。</span>（<span class="lyqe">But I say unto you, That ye resist not evil: but whosoever shall smite thee on thy right cheek, turn to him the other also. And if any man will sue thee at the law, and take away thy coat, let him have thy cloak also.</span>）思考：<a href="#8.5" class="lyref">8.5</a>  曾子称赞颜回<span class="lyq">犯而不校</span>，与“以直报怨”是否矛盾？</span></span></p>
 </div>
 </div>
 <a id="14.35"></a><div class="lyblob">
@@ -5743,7 +5743,7 @@ img.characterimg {
 <li><p><span class="lyterm">而岂徒哉？</span>：这难道是没有企图的吗？指肯定会好好任用自己。<span class="lyterm">而</span>：近指代词，此，这。<span class="lyexample"><span>【例】</span><span>《战国策·赵策一·晋毕阳之孙豫让》：<span class="lyq">豫让拔剑三跃，呼天击之，曰：“而可以报知伯矣！”</span></span></span><a id="tu2a"></a><span class="lyterm">徒</span>：本义为空着，不借助外物，引申为无结果地，白白地。<span class="lyexample"><span>【例】</span><span>徒手，徒步，徒劳。</span></span></p></li>
 <li><p><span class="lyterm">吾其为（<span class="lypinyin">wéi</span>）东周乎！</span>：我当是能（在那里）兴起一个东方的“周”啊！<span class="lyterm">东周</span>属于类比的说法，因为文武周公开创的周朝建都于中原西部，是孔子心目中的理想典范，可当时仅容苟安了，所以他有心在东方的鲁国恢复礼乐文教，重现往日的辉煌。这是已届<a href="#erlibuhuo">知命</a>之年的孔子经过长期的政治失意，跃跃欲试的话。现代历史通称的<a href="#zhouchao">东周</a>，是指周平王迁都至洛邑后的周朝（前770年—前256年），但那时不会这样自称。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》对“子欲往”的描写是：<span class="lyq">孔子循道弥久，温温无所试，莫能己用，曰：“盖周文武起<a href="#sanfentianxia">丰</a><a href="#zhouchao">镐</a>而王，今费虽小，傥<a href="#shu4a">庶几</a>乎！”欲往。</span>（温温：不冷不热，形容已有名气而未尽得其志。傥（<span class="lypinyin">tǎng</span>）：或许。）1711年朝鲜使团访日，副使任守干《东槎（<span class="lypinyin">chá</span>，木筏）日记》载，日人问及西方诸国皆采清朝冠服，为何朝鲜仍守大明旧仪时，正使赵泰亿答曰：<span class="lyq">天下皆<a href="#zuoren">左衽</a>，而独我国不改华制；清国以我为礼义之邦，亦不敢加之以非礼。普天之下，我独为东周。贵邦亦有用华之意否？</span>所本即为此章。</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》对“子欲往”的描写是：<span class="lyq">孔子循道弥久，温温无所试，莫能己用，曰：“盖周文武起<a href="#sanfentianxia">丰</a><a href="#zhouchao">镐</a>而王，今费虽小，傥<a href="#shu4a">庶几</a>乎！”欲往。</span>（温温：不冷不热，形容已有名气而未尽得其志。傥（<span class="lypinyin">tǎng</span>）：或许。）1711年朝鲜使团访日，副使任守干《东槎（<span class="lypinyin">chá</span>，木筏）日记》载，日人问及西方诸国皆采清朝冠服，为何朝鲜仍守大明旧仪时，正使赵泰亿答曰：<span class="lyq">天下皆<a href="#zuoren">左衽</a>，而独我国不改华制；清国以我为礼义之邦，亦不敢加之以非礼。普天之下，我独为东周。贵邦亦有用华之意否？</span></span></span></p>
 </div>
 </div>
 <a id="17.6"></a><div class="lyblob">
@@ -5753,7 +5753,7 @@ img.characterimg {
 <p>本章论仁政，“于天下为仁”者，而非修身之仁。可以比较 <a href="#1.10" class="lyref">1.10</a> <span class="lyq">温、良、恭、俭、让</span>。</p>
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">不<a href="#wu3">侮</a></span>：不被人轻视慢待。<span class="lyseealso"><span>【参】</span><span><a href="#8.4" class="lyref">8.4</a> <span class="lyq">动容貌，斯远暴慢矣。</span></span></span></p></li>
-<li><p><span class="lyterm"><a href="#ren4a">任</a></span>：使担当职责或职务，即信任，信赖。</p></li>
+<li><p><span class="lyterm"><a href="#ren4a">任</a></span>：使担当（职责或职务），任用，引申为信任，信赖。<span class="lyexample"><span>【例】</span><span>《史记·屈原贾生列传》说屈原博闻多才，<span class="lyq">为楚怀王左徒。……入则与王图议国事，以出号令；出则接遇宾客，应对诸侯。王甚任之。</span>同样既有委以重任，又有听之信之的含义。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">宽则得众，信则民任焉，敏则有功，公则说。</span>用在现代社会，就像刘宝瑞单口相声《连升三级》里的话：<span class="lyq">现在你不能替人民办事，他人民也不选举你呀！</span>（约录制于1960年。）</span></span></p></li>
 </ul>
 </div>
 </div>
@@ -5798,7 +5798,7 @@ img.characterimg {
 </li>
 <li><p><span class="lyterm">观</span>：观察，指察览世间百态，体会缘由得失。</p></li>
 <li><p><span class="lyterm">群</span>：合群，指学习交际练达之道。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> <span class="lyq">不学《诗》，无以言。</span></span></span></p></li>
-<li><p><span class="lyterm"><a href="#yuan4a">怨</a></span>：悲愁，指抒发心中的不满和苦闷，又特指讥刺时政。<span class="lyseealso"><span>【参】</span><span>《史记·屈原贾生列传》探究了屈原创作《离骚》时的心境：<span class="lyq">屈平正道直行，竭忠尽智以事其君，谗人<a href="#jian4b">间</a>之，可谓<a href="#qiong2">穷</a>矣。信而见疑，忠而被谤，能无怨乎？屈平之作《离骚》，盖自怨生也。《<a href="#shijing">国风</a>》好色而不淫，《小雅》怨诽而不乱，若《离骚》者，可谓兼之矣。</span></span></span></p></li>
+<li><p><span class="lyterm"><a href="#yuan4a">怨</a></span>：悲愁，指抒发心中的不满和苦闷，又特指讥刺时政。<span class="lyseealso"><span>【参】</span><span>《史记·屈原贾生列传》探究了屈原创作《离骚》时的心境：<span class="lyq">屈平正道直行，竭忠尽智以事其君，谗人<a href="#jian4b">间</a>之，可谓<a href="#qiong2">穷</a>矣。信而见疑，忠而被谤，能无怨乎？屈平之作《离骚》，盖自怨生也。《<a href="#shijing">国风</a>》好色而不<a href="#yin2">淫</a>，《小雅》怨诽而不<a href="#luan4">乱</a>，若《离骚》者，可谓兼之矣。</span>（好色：指多描写男女恋情。）</span></span></p></li>
 <li><p><span class="lyterm">迩（<span class="lypinyin">ěr</span>）之</span>：相当于往近了讲。<a id="er3"></a><span class="lyterm">迩</span>：近。<span class="lyexample"><span>【例】</span><span>成语“闻名遐迩”（遐（<span class="lypinyin">xiá</span>）：远）。</span></span></p></li>
 </ul></div>
 </div>
@@ -6243,6 +6243,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#19.10">19.10</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“君子信而后劳其民，未信，则以为厉己也；信而后谏，未信，则以为谤己也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
+<li><p><span class="lyterm"><a href="#xin4">信</a></span>：指做到了信，取信于人。<span class="lyseealso"><span>【参】</span><span><a href="#17.6" class="lyref">17.6</a> <span class="lyq">信则人任焉。</span></span></span></p></li>
 <li><p><span class="lyterm">则以为厉己也</span>的主语是“其民”。<span class="lyterm"><a href="#li4d">厉</a></span>：动词，虐害，残酷对待。思考：你能不能举出历史上“信而后劳其民”的反例？它们产生了什么结果和影响？</p></li>
 <li><p><span class="lyterm">则以为谤己也</span>隐含的主语是“其君”。<span class="lyterm">谤</span>：本义为公开批评指责别人的过失，引申为毁谤，用夸张不实的话来攻击丑化。<span class="lyexample"><span>【例】</span><span>《国语·周语上》：<span class="lyq"><a href="#lixuanyouping">厉王</a>虐，国人谤王。</span></span></span><span class="lyseealso"><span>【参】</span><span>苏轼1071年《上神宗皇帝书》：<span class="lyq">未信而谏，圣人不<a href="#yu3a">与</a>；交浅言深，君子所戒。</span></span></span></p></li>
 </ul></div>
@@ -6291,7 +6292,7 @@ img.characterimg {
 <a id="19.16"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.16">19.16</a></div>
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“堂堂乎<a href="#zizhang">张</a>也，难与并为仁矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">堂堂</span>：志气宏大的样子。<span class="lyexample"><span>【例】</span><span>岳飞《驻兵新淦（<span class="lypinyin">gàn</span>）题伏魔寺壁》：<span class="lyq">胆气堂堂贯斗牛，誓将直<a href="#jie2c">节</a>报君仇。</span>（斗（<span class="lypinyin">dǒu</span>）牛：二十八星宿中的斗宿和牛宿，用以形容胆气冲天。君仇：指导致北宋灭亡的靖康之耻。）</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">堂堂</span>：志气宏大的样子。<span class="lyexample"><span>【例】</span><span>岳飞《驻兵新淦（<span class="lypinyin">gàn</span>）题伏魔寺壁》：<span class="lyq">胆气堂堂贯斗牛，誓将直<a href="#jie2c">节</a>报君仇。</span>（斗（<span class="lypinyin">dǒu</span>）牛：古代天文二十八星宿中的斗宿和牛宿，这句诗是形容胆气冲天。君仇：指导致北宋灭亡的靖康之耻。）</span></span></p></li></ul></div>
 </div>
 <a id="19.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.17">19.17</a></div>
